tests/compile_errors/match-string-condition-type.buzz
// `match` condition must be of type `str`, `pat` or `type`
import "buzz:std";

test "match string condition type" {
    std\assert(
        match ("hello") {
            1 -> "number",
            else -> "string",
        } == "string",
    );
}
